kubernetes-manifest/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          protocol: TCP
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: hostvolume
          mountPath: /var/lib/mysql
      volumes:
        - name: hostvolume
          hostPath:
            path: /var/lib/mysql
            type: DirectoryOrCreate
      terminationGracePeriodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql-svc
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
